[gd_scene load_steps=5 format=2]

[ext_resource path="res://GameOverScreen.gd" type="Script" id=2]
[ext_resource path="res://tanks/player/PlayerHUDFont.tres" type="FontFile" id=3]

[sub_resource type="InputEventAction" id=2]
action = "ui_accept"
pressed = true

[sub_resource type="Shortcut" id=3]
shortcut = SubResource( 2 )

[node name="GameOverScreen" type="CanvasLayer"]
process_mode = 2
layer = 5
script = ExtResource( 2 )

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -405.0
offset_top = -202.0
offset_bottom = 202.0
theme_override_constants/margin_right = 50
theme_override_constants/margin_top = 50
theme_override_constants/margin_left = 50
theme_override_constants/margin_bottom = 50
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
offset_left = 50.0
offset_top = 50.0
offset_right = 355.0
offset_bottom = 354.0
theme_override_constants/separation = 15
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Title" type="Label" parent="MarginContainer/VBoxContainer"]
offset_right = 305.0
offset_bottom = 44.0
theme_override_fonts/font = ExtResource( 3 )
theme_override_colors/font_color = Color( 0.913725, 0.141176, 0.0627451, 1 )
text = "Game Over"
align = 1

[node name="Score" type="Label" parent="MarginContainer/VBoxContainer"]
offset_top = 59.0
offset_right = 305.0
offset_bottom = 103.0
theme_override_fonts/font = ExtResource( 3 )
text = "Score: 0"
align = 1

[node name="NewGame" type="Button" parent="MarginContainer/VBoxContainer"]
offset_top = 118.0
offset_right = 305.0
offset_bottom = 168.0
tooltip_text = "Start a new game [Enter]"
size_flags_vertical = 0
theme_override_fonts/font = ExtResource( 3 )
shortcut_in_tooltip = false
shortcut = SubResource( 3 )
text = "New Game"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MainMenu" type="Button" parent="MarginContainer/VBoxContainer"]
offset_top = 183.0
offset_right = 305.0
offset_bottom = 233.0
tooltip_text = "Start a new game [Enter]"
size_flags_vertical = 0
theme_override_fonts/font = ExtResource( 3 )
shortcut_in_tooltip = false
shortcut = SubResource( 3 )
text = "Main Menu"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Quit" type="Button" parent="MarginContainer/VBoxContainer"]
offset_top = 248.0
offset_right = 305.0
offset_bottom = 298.0
tooltip_text = "Start a new game [Enter]"
size_flags_vertical = 0
theme_override_fonts/font = ExtResource( 3 )
toggle_mode = true
shortcut_in_tooltip = false
shortcut = SubResource( 3 )
text = "Quit"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="MarginContainer/VBoxContainer/NewGame" to="." method="_on_NewGame_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/MainMenu" to="." method="_on_MainMenu_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Quit" to="." method="_on_Quit_pressed"]
